# lumina

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.claude/: launch.json
api/: main.py  requirements.txt
api/core/: database.py
api/data/signals/: signals.db
api/routers/: backtest.py  geopolitical.py  kalshi.py  live.py  sentiment.py  signals.py  topics.py  validation.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestion  Dockerfile.pipeline
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: Charts.tsx  RegimeGauge.tsx  SentimentChart.tsx
frontend/src/components/inspector/: index.tsx
frontend/src/components/notebook/: BacktestPanel.tsx
frontend/src/components/ui/: index.tsx
frontend/src/components/validation/: ICChart.tsx  TearsheetTable.tsx
frontend/src/hooks/: useFetch.ts  useLiveSignal.ts
frontend/src/lib/: api.ts
ingestion/: Cargo.toml
ingestion/src/: main.rs
ingestion/src/sources/: edgar.rs  fred.rs  gdelt.rs  mod.rs  reddit.rs  wikipedia.rs
ingestion/src/utils/: parquet.rs
pipeline/: requirements.txt  run_pipeline.py
pipeline/backfill/: arctic_shift.py  dedup.py  run_backfill.py
pipeline/nlp/: geopolitical.py  sentiment.py  topics.py
pipeline/signals/: kalshi_features.py
pipeline/training/: regime_classifier.py
pipeline/validation/: aligner.py  fetcher.py  metrics.py  tearsheet.py
scripts/: daily_run.sh  run_pipeline.sh
