[package]
name = "lumina-ingestion"
version = "0.1.0"
edition = "2021"
description = "Async multi-source ingestion pipeline for Lumina"

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow2 = { version = "0.18", features = ["io_parquet", "io_parquet_compression"] }
parquet2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
csv = "1.3"
regex = "1.10"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
